// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QR Code component correctly changes torch button when icon is released 1`] = `
<Fragment>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0.65)",
          "height": 562.5,
          "width": 750,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "white",
          "borderRadius": 2,
          "borderWidth": 2,
          "height": 562.5,
          "justifyContent": "center",
          "width": 562.5,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0.65)",
          "height": 562.5,
          "width": 750,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0.65)",
        "flex": 1,
        "height": "100%",
        "justifyContent": "space-between",
        "width": "100%",
        "zIndex": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgb(255, 239, 223)",
          "flex": 1,
          "fontFamily": "TTCommons-Light",
          "fontSize": 20,
          "lineHeight": 22,
          "marginTop": 16,
          "textAlign": "center",
          "width": 562.5,
        }
      }
    >
      It's all automatic, just place your phone above the code
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <TouchableHighlight
        activeOpacity={1}
        delayPressOut={100}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          Object {
            "alignItems": "center",
            "height": 80,
            "justifyContent": "center",
            "width": 80,
          }
        }
        underlayColor="transparent"
      >
        <SvgTorchOffIcon />
      </TouchableHighlight>
    </View>
  </View>
</Fragment>
`;

exports[`QR Code component correctly changes torch button while icon is touched 1`] = `
<Fragment>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0.65)",
          "height": 562.5,
          "width": 750,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "white",
          "borderRadius": 2,
          "borderWidth": 2,
          "height": 562.5,
          "justifyContent": "center",
          "width": 562.5,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0.65)",
          "height": 562.5,
          "width": 750,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0.65)",
        "flex": 1,
        "height": "100%",
        "justifyContent": "space-between",
        "width": "100%",
        "zIndex": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgb(255, 239, 223)",
          "flex": 1,
          "fontFamily": "TTCommons-Light",
          "fontSize": 20,
          "lineHeight": 22,
          "marginTop": 16,
          "textAlign": "center",
          "width": 562.5,
        }
      }
    >
      It's all automatic, just place your phone above the code
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <TouchableHighlight
        activeOpacity={1}
        delayPressOut={100}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          Object {
            "alignItems": "center",
            "height": 80,
            "justifyContent": "center",
            "width": 80,
          }
        }
        underlayColor="transparent"
      >
        <SvgTorchOnIcon />
      </TouchableHighlight>
    </View>
  </View>
</Fragment>
`;

exports[`QR Code component matches the snapshot on initial render 1`] = `
<Fragment>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0.65)",
          "height": 562.5,
          "width": 750,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "borderColor": "white",
          "borderRadius": 2,
          "borderWidth": 2,
          "height": 562.5,
          "justifyContent": "center",
          "width": 562.5,
        }
      }
    />
    <View
      style={
        Object {
          "backgroundColor": "rgba(0, 0, 0, 0.65)",
          "height": 562.5,
          "width": 750,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0.65)",
        "flex": 1,
        "height": "100%",
        "justifyContent": "space-between",
        "width": "100%",
        "zIndex": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgb(255, 239, 223)",
          "flex": 1,
          "fontFamily": "TTCommons-Light",
          "fontSize": 20,
          "lineHeight": 22,
          "marginTop": 16,
          "textAlign": "center",
          "width": 562.5,
        }
      }
    >
      It's all automatic, just place your phone above the code
    </Text>
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <TouchableHighlight
        activeOpacity={1}
        delayPressOut={100}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          Object {
            "alignItems": "center",
            "height": 80,
            "justifyContent": "center",
            "width": 80,
          }
        }
        underlayColor="transparent"
      >
        <SvgTorchOffIcon />
      </TouchableHighlight>
    </View>
  </View>
</Fragment>
`;
